feat: default values for permissive strategy